# hello-cosmwasm-rust

./: Cargo.toml  README.md
.cargo/: config
schema/: contract.json
src/: contract.rs  lib.rs  msg.rs  state.rs
