[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
cw-storage-plus = "1.2.0"
thiserror = "1.0"
schemars = "0.8.6"
cw-utils = "1.0.3"

[dev-dependencies]
cw-multi-test = "0.20.0"
cosmwasm-schema = { version = "1.5.2" }